optimized text system